--- a/lessons/SG3_problem6_interactive_lesson.html
+++ b/lessons/SG3_problem6_interactive_lesson.html
@@ -89,6 +89,22 @@
   .center{text-align:center;}
 
   .hidden{display:none;}
+
+  /* Floating calculator */
+  #floatCalc{ position:fixed; right:16px; bottom:16px; width:340px; max-width: calc(100vw - 32px);
+    background:#ffffff; border:1px solid var(--line); border-radius:14px; box-shadow: 0 18px 40px rgba(0,0,0,.18);
+    z-index:9999; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto; }
+  #floatCalc header{ background:var(--teal); color:#fff; padding:10px 12px; border-radius:14px 14px 0 0; display:flex; align-items:center; justify-content:space-between; }
+  #floatCalc header .title{ font-weight:900; font-size:13px; }
+  #floatCalc header button{ padding:6px 8px; border-radius:10px; border:1px solid rgba(255,255,255,.25); background:rgba(255,255,255,.12); color:#fff; }
+  #floatCalc .body{ padding:10px 12px; }
+  #floatCalc .row{ display:flex; gap:8px; }
+  #floatCalc input{ width:100%; padding:10px 10px; border-radius:10px; border:1px solid #cbd5e1; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; font-size:14px; }
+  #floatCalc .mini{ font-size:12px; color:var(--muted); margin:8px 0; }
+  #floatCalc .keys{ display:flex; flex-wrap:wrap; gap:6px; margin-top:8px; }
+  #floatCalc .keys button{ padding:7px 9px; border-radius:10px; border:1px solid var(--line); background:#fff; font-weight:900; }
+  #floatCalc .keys button.ins{ background:var(--teal2); border-color:#cfe3ea; color:var(--teal); }
+  #floatCalc .out{ margin-top:8px; padding:8px 10px; border-radius:10px; border:1px dashed #cfe3ea; background:#fcfeff; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; }
 </style>
 </head>
 <body>
@@ -510,6 +526,38 @@ contrast(em6.cell, cell6.list)
 
 </div>
 
+<!-- Floating Calculator (always available) -->
+<div id="floatCalc" aria-label="Floating calculator">
+  <header>
+    <div class="title">Calculator</div>
+    <div style="display:flex; gap:6px;">
+      <button id="calcMin" title="Minimize">Hide</button>
+      <button id="calcClr" title="Clear">Clear</button>
+    </div>
+  </header>
+  <div class="body" id="calcBody">
+    <div class="row">
+      <input id="calcExpr" placeholder="Type an expression, e.g., 7.61 - 7.48" />
+      <button class="primary" id="calcGo">=</button>
+    </div>
+    <div class="mini">Tip: click the insert buttons to drop unlocked means into the expression.</div>
+    <div class="keys">
+      <button class="ins" data-ins="ybar_right">Insert \(\bar Y_{right\cdot\cdot}\)</button>
+      <button class="ins" data-ins="ybar_mixed">Insert \(\bar Y_{\cdot mixed\cdot}\)</button>
+      <button class="ins" data-ins="ybar_cell_right_mixed">Insert \(\bar Y_{right,mixed\cdot}\)</button>
+      <button class="ins" data-ins="ybar_grand">Insert \(\bar Y_{\cdot\cdot\cdot}\)</button>
+      <button data-key="+">+</button>
+      <button data-key="-">−</button>
+      <button data-key="*">×</button>
+      <button data-key="/">÷</button>
+      <button data-key="(">(</button>
+      <button data-key=")">)</button>
+      <button data-key="^">^</button>
+    </div>
+    <div class="out" id="calcOut">Result: —</div>
+  </div>
+</div>
+
 <script>
   // ------------------------------
   // Utilities
@@ -610,6 +658,10 @@ contrast(em6.cell, cell6.list)
   // initial render (hidden)
   renderChips6a();
 
+  // Expose unlocked means to the floating calculator
+  window.__means6a = means6a;
+  window.__unlocked6a = unlocked6a;
+
   (function init6a(){
     document.querySelectorAll('.calc-box[data-prob]').forEach(box => {
       const key = box.getAttribute('data-prob');
@@ -670,11 +722,155 @@ contrast(em6.cell, cell6.list)
     return { ok, msg: ok ? 'ok' : `exp≈${expected}` };
   }
 
+  (function initFloatCalc(){
+    const box = document.getElementById('floatCalc');
+    const body = document.getElementById('calcBody');
+    const expr = document.getElementById('calcExpr');
+    const out = document.getElementById('calcOut');
+    const go = document.getElementById('calcGo');
+    const min = document.getElementById('calcMin');
+    const clr = document.getElementById('calcClr');
+    if (!box || !expr || !out) return;
+
+    function showResult(msg, ok=true){
+      out.textContent = msg;
+      out.style.borderColor = ok ? '#cfe3ea' : '#fecaca';
+      out.style.background = ok ? '#fcfeff' : '#fff1f2';
+    }
+
+    function evalExpr(raw){
+      // tiny safe-ish evaluator: digits, ops, parentheses, decimal points, spaces
+      let s = String(raw || '').trim();
+      if (!s) return null;
+      s = s.replace(/×/g,'*').replace(/÷/g,'/');
+      // exponent
+      s = s.replace(/\^/g,'**');
+      if (!/^[0-9+\-*/().\s*]*$/.test(s)) throw new Error('Only numbers and + - * / ( ) ^ allowed');
+      // eslint-disable-next-line no-new-func
+      const v = Function(`"use strict"; return (${s});`)();
+      if (!Number.isFinite(v)) throw new Error('Result is not finite');
+      return v;
+    }
+
+    function insertText(t){
+      const start = expr.selectionStart ?? expr.value.length;
+      const end = expr.selectionEnd ?? expr.value.length;
+      const before = expr.value.slice(0,start);
+      const after = expr.value.slice(end);
+      expr.value = before + t + after;
+      expr.focus();
+      const pos = start + String(t).length;
+      expr.setSelectionRange(pos,pos);
+    }
+
+    function getUnlockedValue(key){
+      const means = window.__means6a || {};
+      const unlocked = window.__unlocked6a || {};
+      if (key === 'ybar_right' && unlocked.ybar_right) return means.right;
+      if (key === 'ybar_mixed' && unlocked.ybar_mixed) return means.mixed;
+      if (key === 'ybar_cell_right_mixed' && unlocked.ybar_cell_right_mixed) return means.cell_right_mixed;
+      if (key === 'ybar_grand' && unlocked.ybar_grand) return means.grand;
+      return null;
+    }
+
+    function updateInsertButtons(){
+      box.querySelectorAll('button[data-ins]').forEach(b => {
+        const k = b.getAttribute('data-ins');
+        const v = getUnlockedValue(k);
+        b.disabled = (v === null);
+        b.style.opacity = b.disabled ? .45 : 1;
+      });
+    }
+
+    go?.addEventListener('click', () => {
+      try{
+        const v = evalExpr(expr.value);
+        if (v === null) return;
+        showResult(`Result: ${v}`);
+      } catch(e){
+        showResult(`Error: ${e.message}`, false);
+      }
+    });
+    expr.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') go.click();
+    });
+
+    box.querySelectorAll('button[data-key]').forEach(b => {
+      b.addEventListener('click', () => insertText(b.getAttribute('data-key')));
+    });
+    box.querySelectorAll('button[data-ins]').forEach(b => {
+      b.addEventListener('click', () => {
+        const k = b.getAttribute('data-ins');
+        const v = getUnlockedValue(k);
+        if (v === null){
+          showResult('Unlock that mean first in 6a (mapping table).', false);
+          return;
+        }
+        insertText(String(v));
+      });
+    });
+
+    clr?.addEventListener('click', () => {
+      expr.value = '';
+      showResult('Result: —');
+      expr.focus();
+    });
+
+    min?.addEventListener('click', () => {
+      const hidden = body.style.display === 'none';
+      body.style.display = hidden ? 'block' : 'none';
+      min.textContent = hidden ? 'Hide' : 'Show';
+    });
+
+    // refresh buttons periodically (cheap + robust)
+    updateInsertButtons();
+    setInterval(updateInsertButtons, 600);
+  })();
+
   (function init6b(){
     const fb = document.getElementById('fb-6b');
     const checkBtn = document.getElementById('check-6b');
     const revealBtn = document.getElementById('reveal-6b');
     const resetBtn = document.getElementById('reset-6b');
+
+    // Expose to calculator (6b pieces)
+    window.__anova6b = {
+      ss_A:57.0, ss_SA:17.4, ss_B:9.0, ss_BSA:30.6, ss_AB:2.0,
+      df_A:2, df_SA:15, df_B:2, df_BSA:30, df_AB:4,
+      ms_A:28.50, ms_SA:1.16, ms_B:4.50, ms_BSA:1.02, ms_AB:0.50,
+      f_A:24.57, f_B:4.41, f_AB:0.49
+    };
+
+    // keep calculator values in sync if user reveals the key
+    function refreshCalcFromInputs(){
+      try{
+        const tbl = document.getElementById('anova-6b');
+        if (!tbl) return;
+        const get = (row, field) => {
+          const tr = tbl.querySelector(`tr[data-row="${row}"]`);
+          const inp = tr?.querySelector(`input[data-field="${field}"]`);
+          return inp ? toNum(inp.value) : null;
+        };
+        const dfA=get('A','df'), msA=get('A','ms'), fA=get('A','f');
+        const dfSA=get('SA','df'), msSA=get('SA','ms');
+        const dfB=get('B','df'), msB=get('B','ms'), fB=get('B','f');
+        const dfBSA=get('BSA','df'), msBSA=get('BSA','ms');
+        const dfAB=get('AB','df'), msAB=get('AB','ms'), fAB=get('AB','f');
+        if (dfA!=null) window.__anova6b.df_A=dfA;
+        if (msA!=null) window.__anova6b.ms_A=msA;
+        if (fA!=null) window.__anova6b.f_A=fA;
+        if (dfSA!=null) window.__anova6b.df_SA=dfSA;
+        if (msSA!=null) window.__anova6b.ms_SA=msSA;
+        if (dfB!=null) window.__anova6b.df_B=dfB;
+        if (msB!=null) window.__anova6b.ms_B=msB;
+        if (fB!=null) window.__anova6b.f_B=fB;
+        if (dfBSA!=null) window.__anova6b.df_BSA=dfBSA;
+        if (msBSA!=null) window.__anova6b.ms_BSA=msBSA;
+        if (dfAB!=null) window.__anova6b.df_AB=dfAB;
+        if (msAB!=null) window.__anova6b.ms_AB=msAB;
+        if (fAB!=null) window.__anova6b.f_AB=fAB;
+      } catch(e){}
+    }
 
     function setMsg(ok, msg){
       fb.textContent = msg;
@@ -738,6 +934,7 @@ contrast(em6.cell, cell6.list)
         const fInp = tr.querySelector('input[data-field="f"]');
         if (fInp && exp.f !== undefined) fInp.value = exp.f.toFixed(2);
       });
+      refreshCalcFromInputs();
       setMsg(true, 'Key revealed.');
     }
 
